--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "backend",
+  "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4"
-  },
-  "devDependencies": {
+    "mongoose": "^8.0.2",
+    "node-cron": "^3.0.3",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.2"
   }
 }
